# docsy

./: .gitignore  CHANGELOG.md  Docsy软件设计文档.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-desktop.yml  build-windows.yml
Archived/: Docsy软件设计文档.md  README.md
Archived/docs/: logging-observability.md  pdf-evidence-workflow.md  project-health-report.md
Archived/src/: App.vue  main.js  styles.css
Archived/src-tauri-src/: app_log.rs  history.rs  lib.rs  main.rs
Archived/src-tauri-src/ffmpeg/: detect.rs  extract.rs  mod.rs
Archived/src-tauri-src/pdf/: evidence.rs  overlay.rs  qpdf.rs
Archived/src/components/: DictEditor.vue
Archived/src/services/: appLogger.js
Archived/src/views/: HomeView.vue  ImagePaddlerView.vue  LetterView.vue  ManageView.vue  PdfEvidenceView.vue  PdfToolsView.vue  PdfUnlock.vue  SettingsView.vue  TemplateView.vue  VideoExtractView.vue
docs/: architecture.md  code-review-2026-07-20.md  docx-research.md  external-tools.md  logging-observability.md  pdf-evidence-processing-design.md  pdf-底层库选型与纯Rust化方案.md  template-editor-refactor.md  template-quickxml-0.8.0-plan.md  template-system-design.md
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  dict_xlsx.rs  docx_template.rs  history.rs  image_paddler.rs  lib.rs  sort_utils.rs  template_builder.rs  template_history.rs  templates.rs
src-tauri/src/commands/: bundle.rs  dictionary.rs  doc_gen.rs  image_paddler.rs  mod.rs  pdf.rs  record.rs  settings.rs  system.rs  template.rs  template_editor.rs  video.rs
src-tauri/src/docx/: mod.rs  model.rs  package.rs  render.rs  utils.rs
src-tauri/src/docx_template/: engine.rs  index.rs  mod.rs  ooxml.rs  package.rs  render.rs  save.rs  scan.rs
src-tauri/src/ffmpeg/: detect.rs  extract.rs  mod.rs  probe.rs
src-tauri/src/pdf/: annotations.rs  artifacts.rs  content_text.rs  detection.rs  evidence.rs  evidence_session.rs  header_footer.rs  mod.rs  normalize.rs  overlay.rs  page_info.rs  preview.rs  qpdf.rs  split.rs
src-tauri/src/services/: bundle.rs  dictionary.rs  doc_gen.rs  export.rs  history.rs  mod.rs  module_registry.rs  template_builder.rs  template_store.rs
src-tauri/templates/: dictionaries.json  letter.docx  letter.fields.json
src/components/: FieldDate.vue  FieldList.vue  FieldParty.vue  FieldReference.vue  FieldSelect.vue  FieldText.vue  InferRuleEditor.vue
src/core/: filePath.js  loading.js  moduleRegistry.js  moduleRegistry.test.js  numberFormat.js  pdfUtils.js  pdfUtils.test.js  tauriBridge.js  tauriBridge.test.js  unitConversion.js
src/features/template-editor/: TemplateEditorView.vue
src/modules/doc-gen/: index.js
src/router/: index.js
src/services/: appLogger.js  devTracker.js
src/stores/: app.js  dictionary.js  template.js
src/views/: HomeView.vue  LetterView.vue  ManageView.vue  PdfToolsView.vue  PlaceholderView.vue  RecordsView.vue  SettingsView.vue
templates/: 101001专利权无效宣告请求书丨衢州天野VS米客︱202123242804.7一种汽车连接篷.docx  【所函】丨吕晗丨苏州市中级人民法院立案 浦项制铁(1).docx  【所函】丨李乾丨北知院  第三人 NSC-（2026）京73行初6547号.docx  【所函】丨李月春丨北知院  第三人 NSC-（2026）京73行初6547号.docx  【所函】丨李琼+吕晗丨迪思杰.docx  【所函】丨李琼丨原力聚合 二审.docx  【无效授权委托书】8号案丨4W119916丨田力.docx
(+63 files in other folders)
