[package]
name = "docsy"
version = "0.7.5"
description = "Docsy - 轻量文档处理工具箱"
authors = ["only"]
edition = "2021"

[lib]
name = "docsy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
zip = "0.6"
regex = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "=0.25.5", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff"] }
printpdf = { version = "0.9.1", features = ["images"] }
docx-rs = { version = "0.4.20", default-features = false }
lopdf = { version = "0.39.0", default-features = false }
base64 = "0.22"
open = "5"
log = "0.4"
allsorts = { version = "0.16.1", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
office_oxide = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
